starting container with docker ps status

--- a/start_cont.yml
+++ b/start_cont.yml
@@ -7,4 +7,8 @@
        name: "{{ name }}"
        image: "{{ image }}"
        state: started
+    - name: check container status
+      command: docker ps -a
+      register: result
+    - debug: var=result.stdout
 
