--- a/multiple_cont.yml
+++ b/multiple_cont.yml
@@ -2,6 +2,9 @@
  - hosts: localhost
    remote_user: root
    tasks:
+    - name: include variables
+      include_vars: vars.yml
+   
     - name: name for directory from where container will use volume
       file:
        path: /mnt/{{ dir }}.{{ item }}
@@ -14,5 +17,9 @@
        name: "{{ name }}.{{ item }}"
        image: "{{ image }}"
        volumes: /mnt/{{ dir }}.{{ item }}
-       detach: true 
+       interactive: True
+       detach: True
+       command: /bin/bash
+       state: started
+       restart: True
       with_sequence: "{{ count }}"
