--- a/stop_cont.yml
+++ b/stop_cont.yml
@@ -2,6 +2,9 @@
  - hosts: localhost
    remote_user: root
    tasks:
+    - name: include variables
+      include_vars: vars.yml
+
     - name: stop a running container
       docker_container:
        name: "{{ name }}"
