--- a/volume_cont.yml
+++ b/volume_cont.yml
@@ -2,6 +2,9 @@
  - hosts: localhost
    remote_user: root
    tasks:
+    - name: include variables
+      include_vars: vars.yml
+ 
     - name: creating directory for volume
       file:
        path: "{{ path }}"
@@ -13,3 +16,9 @@
        name: "{{ name }}"
        image: "{{ image }}"
        volumes: "{{ path }}"
+       interactive: True
+       detach: True
+       command: /bin/bash
+       state: started
+       restart: True
+
